<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="10dp"
    android:paddingRight="16dp"
    android:paddingBottom="10dp"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        app:counterEnabled="true"
        app:counterMaxLength="500"
        app:errorEnabled="true"
        app:hintEnabled="false">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="textCapSentences" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/short_answer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:errorEnabled="true"
        app:hintEnabled="false" />

    <RelativeLayout
        android:id="@+id/button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:visibility="gone">

    </RelativeLayout>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/short_answer_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/short_answer_fill"
        android:inputType="textCapSentences" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clear_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:shadowColor="#525252"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="2.5"
            android:text="@string/clear_button"
            android:textColor="#FFFFFF"
            android:visibility="visible"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:shadowColor="#525252"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="2.5"
            android:text="@string/submit_button"
            android:textColor="#FFFFFF"
            android:visibility="visible"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/done_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:shadowColor="#525252"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="2.5"
            android:text="@string/done_button"
            android:textColor="#FFFFFF"
            android:visibility="visible"
            tools:ignore="ButtonStyle" />
    </LinearLayout>



</LinearLayout>