<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".DisplayActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="668dp">

        <TableLayout
            android:id="@+id/display_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <RelativeLayout
                android:id="@+id/button_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/buttonshape"
                    android:shadowColor="#525252"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="2.5"
                    android:text="@string/back_button"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/reset_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_toEndOf="@id/back_button"
                    android:background="@drawable/buttonshape"
                    android:shadowColor="#525252"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="2.5"
                    android:text="@string/reset_button"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/finish_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="2dp"
                    android:layout_toEndOf="@id/reset_button"
                    android:background="@drawable/buttonshape"
                    android:shadowColor="#525252"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="2.5"
                    android:text="@string/finish_button"
                    android:textColor="#FFFFFF" />
            </RelativeLayout>

            <TableRow
                android:id="@+id/table_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/question_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:text="@string/question"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/answer_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/answer"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>

    </ScrollView>


</LinearLayout>

