<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none"
    android:layout_weight="1"
    tools:context=".ResultActivity">

    <TableLayout
        android:id="@+id/result_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:id="@+id/button_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/retake_button"
                android:layout_width="wrap_content"
                android:layout_margin="1dp"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonshape"
                android:shadowColor="#525252"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="2.5"
                android:text="@string/retake_button"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/home_button"
                android:layout_width="wrap_content"
                android:layout_margin="1dp"
                android:layout_height="wrap_content"
                android:text="Home"
                android:background="@drawable/buttonshape"
                android:shadowColor="#525252"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="2.5"
                android:textColor="#FFFFFF"/>

        </LinearLayout>

        <!--
        <TableRow
            android:id="@+id/table_row0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/score" />
        </TableRow>
        -->

        <TableRow
            android:id="@+id/table_row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/question_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/question"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/your_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/your_answer"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/answer_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/answer"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>
</ScrollView>
