<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".QuestionActivity">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/short_answer_layout_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        android:visibility="gone">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/short_answer_question_text_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textCapSentences" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <ImageButton
            android:id="@+id/prev_button"
            android:layout_width="27dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/prev_button"
            android:src="@drawable/arrow_left" />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="27dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next_button"
            android:src="@drawable/arrow_right" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/button_group2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/back_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/back_button"
            android:background="@drawable/buttonshape"
            android:shadowColor="#525252"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="2.5"
            android:textColor="#FFFFFF"
            />
        <Button
            android:id="@+id/submit_button_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/submit_button"
            android:layout_gravity="center"
            android:layout_toEndOf="@id/back_button2"
            android:background="@drawable/buttonshape"
            android:shadowColor="#525252"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="2.5"
            android:textColor="#FFFFFF"
            />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="287dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="186dp"
            android:layout_height="273dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/paintViewLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.example.kingbob_y.MeMeQuiz.PaintView
                    android:id="@+id/paintView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


                <TextView
                    android:id="@+id/drawHere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/draw"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/Gray" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/buttonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonClear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="1dp"
                    android:text="@string/clear"
                    android:background="@drawable/buttonshape_light"
                    android:shadowColor="#525252"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="2.5"
                    android:textColor="#FFFFFF"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/altLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible"
                tools:layout_editor_absoluteX="0dp">

                <Button
                    android:id="@+id/alt1"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:tag="1"
                    android:text="" />

                <Button
                    android:id="@+id/alt2"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:tag="2"
                    android:text="" />

                <Button
                    android:id="@+id/alt3"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:tag="3"
                    android:text="" />

                <Button
                    android:id="@+id/alt4"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:tag="4"
                    android:text="" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="184dp"
            android:layout_height="273dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/paintViewLayout2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.example.kingbob_y.MeMeQuiz.PaintView
                    android:id="@+id/paintView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


                <TextView
                    android:id="@+id/drawHere2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/draw"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/Gray" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/buttonLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonClear2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="1dp"
                    android:text="@string/clear"
                    android:background="@drawable/buttonshape_light"
                    android:shadowColor="#525252"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="2.5"
                    android:textColor="#FFFFFF"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/altLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible"
                tools:layout_editor_absoluteX="0dp">

                <Button
                    android:id="@+id/alt1_2"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:tag="1"
                    android:text="" />

                <Button
                    android:id="@+id/alt2_2"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:tag="2"
                    android:text="" />

                <Button
                    android:id="@+id/alt3_2"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:tag="3"
                    android:text="" />

                <Button
                    android:id="@+id/alt4_2"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:tag="4"
                    android:text="" />
            </LinearLayout>

        </LinearLayout>



        <LinearLayout
            android:layout_width="184dp"
            android:layout_height="273dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/paintViewLayout3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.example.kingbob_y.MeMeQuiz.PaintView
                    android:id="@+id/paintView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


                <TextView
                    android:id="@+id/drawHere3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/draw"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/Gray" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/buttonLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonClear3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="1dp"
                    android:text="@string/clear"
                    android:background="@drawable/buttonshape_light"
                    android:shadowColor="#525252"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="2.5"
                    android:textColor="#FFFFFF"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/altLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible"
                tools:layout_editor_absoluteX="0dp">

                <Button
                    android:id="@+id/alt1_3"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:tag="1"
                    android:text="" />

                <Button
                    android:id="@+id/alt2_3"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:tag="2"
                    android:text="" />

                <Button
                    android:id="@+id/alt3_3"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:tag="3"
                    android:text="" />

                <Button
                    android:id="@+id/alt4_3"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:tag="4"
                    android:text="" />
            </LinearLayout>

        </LinearLayout>



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSpace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="1dp"
            android:layout_weight=".5"
            android:background="@drawable/buttonshape"
            android:shadowColor="#525252"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="2.5"
            android:text="@string/space"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/buttonBackspace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="1dp"
            android:layout_weight=".5"
            android:background="@drawable/buttonshape"
            android:shadowColor="#525252"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="2.5"
            android:text="@string/backspace"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/buttonClearAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:shadowColor="#525252"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="2.5"
            android:text="Clear All"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/buttonClassify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:shadowColor="#525252"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="2.5"
            android:text="@string/classify"
            android:textColor="#FFFFFF" />

    </LinearLayout>


</LinearLayout>